Fix tooltip resizing when dragged off screen

--- a/src/components/image-editor.css
+++ b/src/components/image-editor.css
@@ -3,4 +3,5 @@
   padding: 0.25em 0.5em; color: #839496; font-size: 12px;
   background-color: #073642; border-radius: 5px;
   border: 1px solid #002b36;
+  white-space: nowrap;
 }
